fix button not showing, style, and localstorage data structure

--- a/style/cirqle-style-general.scss
+++ b/style/cirqle-style-general.scss
@@ -88,6 +88,7 @@ $font_0: sans-serif;
 	position: absolute;
 	top: 0.5px;
 	left: 40px;
+	letter-spacing: 0px !important;
 	//Instead of the line below you could use @includebox-sizing($bs)
 	box-sizing: content-box !important;
 }
